crates/alef-backend-jni/tests/snapshots/gen_shims_test__snapshot_full_lib_rs.snap
---
source: crates/alef-backend-jni/tests/gen_shims_test.rs
expression: "&lib.content"
---
// Generated by alef. Do not edit by hand.
//
// JNI shim for the Android AAR.  Every `pub unsafe extern "system" fn`
// here matches one `external fun native*` in the paired Kotlin Bridge object.

#![allow(non_snake_case)]
#![allow(clippy::too_many_arguments)]
#![allow(clippy::missing_safety_doc)]
#![allow(unused_imports)]
#![allow(unused_variables)]

use std::sync::OnceLock;
use std::sync::Mutex;
use futures_util::stream::BoxStream;
use futures_util::StreamExt;
use jni::JNIEnv;
use jni::objects::{JClass, JObject, JString};
use jni::sys::{jboolean, jbyteArray, jlong, jstring};
use tokio::runtime::Runtime;

use demo as core_crate;
use core_crate::*; // bring trait methods into scope

const ERROR_CLASS: &str = "dev/kreuzberg/demo/DemoBridgeException";

fn runtime() -> &'static Runtime {
    static RT: OnceLock<Runtime> = OnceLock::new();
    RT.get_or_init(|| Runtime::new().expect("create tokio runtime"))
}

fn jstring_to_string(env: &mut JNIEnv, s: JString) -> std::result::Result<String, jni::errors::Error> {
    let jstr = env.get_string(&s)?;
    Ok(jstr.into())
}

fn string_to_jstring(env: &mut JNIEnv, s: &str) -> jstring {
    match env.new_string(s) {
        Ok(o) => o.into_raw(),
        Err(_) => std::ptr::null_mut(),
    }
}

fn throw_jni_error(env: &mut JNIEnv, msg: &str) {
    let _ = env.throw_new(ERROR_CLASS, msg);
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeCreateClient(
    mut env: JNIEnv,
    _class: JClass,
    api_key: JString,
) -> jstring {
    let api_key = match jstring_to_string(&mut env, api_key) {
        Ok(s) => s,
        Err(e) => { throw_jni_error(&mut env, &format!("{e}")); return std::ptr::null_mut(); }
    };
    let result = runtime().block_on(core_crate::create_client(api_key));
    match result {
        Err(e) => {
            throw_jni_error(&mut env, &format!("{e}"));
            std::ptr::null_mut()
        }
        Ok(v) => {
            let handle_raw = Box::into_raw(Box::new(v)) as jlong;
            let json = format!("{{\"handle\": {}}}", handle_raw);
            string_to_jstring(&mut env, &json)
        }
    }
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeDemoClientDoThing(
    mut env: JNIEnv,
    _class: JClass,
    handle: jlong,
    request_json: JString,
) -> jstring {
    // SAFETY: handle was allocated by the matching constructor shim and remains
    // valid until nativeFree is called. The Kotlin AutoCloseable.close() guarantee
    // ensures the handle outlives this call.
    let client: &core_crate::DemoClient = unsafe { &*(handle as *const core_crate::DemoClient) };
    let req_str = match jstring_to_string(&mut env, request_json) {
        Ok(s) => s,
        Err(e) => { throw_jni_error(&mut env, &format!("{e}")); return std::ptr::null_mut(); }
    };
    let input: String = match serde_json::from_str(&req_str) {
        Ok(s) => s,
        Err(_) => req_str,
    };
    let result = runtime().block_on(client.do_thing(input));
    match result {
        Err(e) => {
            throw_jni_error(&mut env, &format!("{e}"));
            std::ptr::null_mut()
        }
        Ok(v) => {
            let s = serde_json::to_string(&v).unwrap_or_default();
            string_to_jstring(&mut env, &s)
        }
    }
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeDemoClientPing(
    mut env: JNIEnv,
    _class: JClass,
    handle: jlong,
) -> jboolean {
    // SAFETY: handle was allocated by the matching constructor shim and remains
    // valid until nativeFree is called. The Kotlin AutoCloseable.close() guarantee
    // ensures the handle outlives this call.
    let client: &core_crate::DemoClient = unsafe { &*(handle as *const core_crate::DemoClient) };
    let result = runtime().block_on(client.ping());
    match result {
        Err(e) => {
            throw_jni_error(&mut env, &format!("{e}"));
            0u8
        }
        Ok(v) => {
            v as jboolean
        }
    }
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeDemoClientFetchBlob(
    mut env: JNIEnv,
    _class: JClass,
    handle: jlong,
) -> jbyteArray {
    // SAFETY: handle was allocated by the matching constructor shim and remains
    // valid until nativeFree is called. The Kotlin AutoCloseable.close() guarantee
    // ensures the handle outlives this call.
    let client: &core_crate::DemoClient = unsafe { &*(handle as *const core_crate::DemoClient) };
    let result = runtime().block_on(client.fetch_blob());
    match result {
        Err(e) => {
            throw_jni_error(&mut env, &format!("{e}"));
            std::ptr::null_mut()
        }
        Ok(v) => {
            match env.byte_array_from_slice(&v) {
                Ok(arr) => { use jni::objects::JObject; JObject::from(arr).into_raw() as jbyteArray }
                Err(_) => std::ptr::null_mut(),
            }
        }
    }
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeFreeDemoClient(
    _env: JNIEnv,
    _class: JClass,
    handle: jlong,
) {
    if handle == 0 { return; }
    // SAFETY: `handle` was allocated by the matching constructor shim and
    // ownership is transferred back here for drop via Box::from_raw.
    unsafe { let _ = Box::from_raw(handle as *mut core_crate::DemoClient); }
}

struct DemoClientStreamDataStreamHandle {
    rt: &'static Runtime,
    stream: Mutex<Option<BoxStream<'static, std::result::Result<core_crate::DataChunk, Box<dyn std::error::Error + Send + Sync + 'static>>>>>,
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeDemoClientStreamDataStart(
    mut env: JNIEnv,
    _class: JClass,
    client_handle: jlong,
    request_json: JString,
) -> jlong {
    // SAFETY: client_handle was produced by the matching constructor shim.
    let client: &core_crate::DemoClient = unsafe { &*(client_handle as *const core_crate::DemoClient) };
    let req_str = match jstring_to_string(&mut env, request_json) {
        Ok(s) => s,
        Err(e) => { throw_jni_error(&mut env, &format!("{e}")); return 0; }
    };
    let request: core_crate::StreamRequest = match serde_json::from_str(&req_str) {
        Ok(v) => v,
        Err(e) => { throw_jni_error(&mut env, &format!("{e}")); return 0; }
    };
    let stream_result = runtime().block_on(async { client.stream_data(request).await });
    let stream = match stream_result {
        Ok(s) => s,
        Err(e) => { throw_jni_error(&mut env, &format!("{e}")); return 0; }
    };
    // Map the concrete error type to Box<dyn Error> so the handle type is
    // independent of the stream's error associated type.
    let mapped = {
        use futures_util::StreamExt;
        Box::pin(stream.map(|r| r.map_err(|e| -> Box<dyn std::error::Error + Send + Sync + 'static> { Box::new(e) })))
    };
    let handle = Box::new(DemoClientStreamDataStreamHandle {
        rt: runtime(),
        stream: Mutex::new(Some(mapped)),
    });
    Box::into_raw(handle) as jlong
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeDemoClientStreamDataNext(
    mut env: JNIEnv,
    _class: JClass,
    stream_handle: jlong,
) -> jstring {
    if stream_handle == 0 { return std::ptr::null_mut(); }
    // SAFETY: stream_handle was produced by the matching Start shim.
    let h = unsafe { &*(stream_handle as *const DemoClientStreamDataStreamHandle) };
    let mut guard = match h.stream.lock() {
        Ok(g) => g,
        Err(_) => return std::ptr::null_mut(),
    };
    let Some(stream) = guard.as_mut() else { return std::ptr::null_mut(); };
    let next = h.rt.block_on(stream.next());
    match next {
        None => std::ptr::null_mut(),
        Some(Err(e)) => {
            throw_jni_error(&mut env, &format!("{e}"));
            std::ptr::null_mut()
        }
        Some(Ok(chunk)) => {
            let s = serde_json::to_string(&chunk).unwrap_or_default();
            string_to_jstring(&mut env, &s)
        }
    }
}

#[unsafe(no_mangle)]
pub unsafe extern "system" fn Java_dev_kreuzberg_demo_DemoBridge_nativeDemoClientStreamDataFree(
    _env: JNIEnv,
    _class: JClass,
    stream_handle: jlong,
) {
    if stream_handle == 0 { return; }
    // SAFETY: stream_handle was produced by the matching Start shim.
    unsafe { let _ = Box::from_raw(stream_handle as *mut DemoClientStreamDataStreamHandle); }
}
